--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -15,6 +15,7 @@
   --black-40: hsl(0, 0%, 40%);
   --black-50: hsl(0, 0%, 50%);
   --black-60: hsl(0, 0%, 60%);
+  --black-70: hsl(0, 0%, 70%);
   --black-80: hsl(0, 0%, 80%);
   --black-90: hsl(0, 0%, 90%);
   --black-95: hsl(0, 0%, 95%);
@@ -22,8 +23,8 @@
   /* Orange */
   --header: hsl(16, 100%, 25%);
   --cta: hsl(16, 100%, 50%);
-  --active-navlink: hsl(16, 100%, 60%);
-  --hover: hsl(16, 100%, 65%);
+  --active-navlink: hsl(16, 100%, 55%);
+  --hover: hsl(16, 100%, 60%);
   --focus: hsl(12, 100%, 70%);
   --form-input-textarea: hsl(14, 100%, 95%);
   --body-background: hsl(18, 100%, 98%);
@@ -2785,29 +2786,11 @@ My Comments
 }
 
 .my-comment-no-comment {
-  min-height: 100dvh !important;
   align-content: start !important;
-  margin-top: 2rem !important;
 }
 .my-comment-no-comment >
 .no-topic-post-text-container {
   align-self: start;
-}
-
-@media screen and (min-width: 557px) {
-  .my-comment-no-comment {
-    margin-top: 3rem !important;
-  }
-
-  .my-comment-no-comment >
-  .no-topic-post-text-container {
-    text-align: start !important;
-  }
-
-  .my-comment-no-comment >
-  .no-topic-post-text-container > a {
-    justify-self: start !important;
-  }
 }
 
 @media screen and (min-width: 600px) {
@@ -2841,6 +2824,11 @@ Create & Update Post
 .create-post-container > 
 .navbar-brand-link > h2 {
   color: var(--black-15)
+}
+
+.create-post-container > 
+.navbar-brand-link > img {
+  width: 45px;
 }
 
 .create-post__form > div {
@@ -3186,6 +3174,7 @@ USER REGISTER
   color: var(--black-20);
   font-weight: 600;
   font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .user-register__form {
@@ -3356,6 +3345,7 @@ USER LOGIN
   color: var(--black-20);
   font-weight: 600;
   font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .user-login__form {
@@ -3740,35 +3730,60 @@ DASHBOARD
 }
 
 .dashboard-user-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  align-content: start;
+  justify-items: center;
   flex-wrap: wrap;
   text-align: center;
-  gap: 1rem;
+  gap: 0.3rem;
 }
 
 .dashboard-user-img {
-  width: 70px;
+  width: 100px;
   aspect-ratio: 1/1;
   border-radius: 50%;
   display: block;
 }
 
 .dashboard-user-info {
+  display: grid;
+  justify-items: center;
+  align-content: start;
   overflow-x: auto;
 }
 
 .dashboard-user-info > p:first-child {
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   text-transform: capitalize;
-  color: var(--black-20);
   line-height: 1;
+  color: var(--black-20);
 }
 
-.dashboard-user-info > p:last-child {
+.dashboard-user-info > p:nth-child(2) {
   color: var(--black-30);
+  font-size: 0.95rem;
+  font-weight: 500;
+}
+
+.dashboard-divider {
+  width: 2px;
+  height: 13px;
+  background: var(--black-70)
+}
+
+.dashboard-following-follower {
+  margin-top: 0.5rem
+}
+
+.dashboard-following-follower,
+.dashboard-post-comment-count {
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
+  font-size: 0.95rem;
+  color: var(--black-40);
+  justify-content: center;
 }
 
 .dashboard-links {
@@ -3776,9 +3791,26 @@ DASHBOARD
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  column-gap: 2rem;
+  column-gap: 1rem;
   row-gap: 0.5rem;
   margin-top: 2rem;
+  justify-self: center;
+}
+
+.dashboard-link {
+  color: var(--black-95);
+  font-size: 1rem;
+  text-align: center;
+  letter-spacing: 0.05rem;
+  padding: 0.4rem 1rem;
+  border-radius: 20px;
+  background: var(--black-30);
+}
+
+.active-dashboar-link {
+  color: var(--black-95);
+  background: var(--cta);
+  font-weight: 500;
 }
 
 .dashboard-content-header {
@@ -3791,30 +3823,10 @@ DASHBOARD
   line-height: 1;
 }
 
-.dashboard-link {
-  color: var(--black-20);
-  font-size: 1.1rem;
-  text-align: center;
-  font-weight: 500;
-  letter-spacing: 0.05rem;
-}
-
-.active-dashboar-link {
-  color: var(--active-navlink);
-  font-weight: 600;
-}
-
 .dashboard-contents {
   border-top: 1px solid var(--black-80);
   padding-top: 3rem
 }
-
-@media (min-width: 388px) {
-  .dashboard-user-container {
-    text-align: start;
-  }
-}
-
 /* 
 =======
 PROFILE
