--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -3718,7 +3718,7 @@ DASHBOARD
   min-height: 70dvh;
   width: 90%;
   max-width: 1000px;
-  margin: 4rem auto;
+  margin: 2rem auto;
   display: grid;
   align-content: start;
 }
@@ -3726,7 +3726,6 @@ DASHBOARD
 .dashboard {
   display: grid;
   align-content: start;
-  gap: 1rem;
 }
 
 .dashboard-user-container {
@@ -3735,11 +3734,11 @@ DASHBOARD
   justify-items: center;
   flex-wrap: wrap;
   text-align: center;
-  gap: 0.3rem;
+  gap: 1rem;
 }
 
 .dashboard-user-img {
-  width: 100px;
+  width: 150px;
   aspect-ratio: 1/1;
   border-radius: 50%;
   display: block;
@@ -3773,7 +3772,7 @@ DASHBOARD
 }
 
 .dashboard-following-follower {
-  margin-top: 0.5rem
+  margin-top: 1rem
 }
 
 .dashboard-following-follower,
@@ -3792,32 +3791,27 @@ DASHBOARD
   justify-content: center;
   flex-wrap: wrap;
   column-gap: 1rem;
-  row-gap: 0.5rem;
   margin-top: 2rem;
-  justify-self: center;
 }
 
 .dashboard-link {
-  color: var(--black-95);
+  color: var(--black-15);
   font-size: 1rem;
-  text-align: center;
   letter-spacing: 0.05rem;
-  padding: 0.4rem 1rem;
-  border-radius: 20px;
-  background: var(--black-30);
+  font-weight: 500;
 }
 
 .active-dashboar-link {
-  color: var(--black-95);
-  background: var(--cta);
-  font-weight: 500;
+  color: var(--cta);
+  font-weight: 600;
 }
 
 .dashboard-content-header {
   letter-spacing: 0.05rem;
   color: var(--header);
-  margin-top: 2rem;
-  font-size: 1.7rem;
+  margin-top: 2.5rem;
+  padding-bottom: 1rem;
+  font-size: clamp(1.3rem, 1dvw + 1rem, 1.8rem);
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1;
@@ -3825,8 +3819,16 @@ DASHBOARD
 
 .dashboard-contents {
   border-top: 1px solid var(--black-80);
-  padding-top: 3rem
+  padding-top: 2rem
 }
+
+@media (min-width: 600px) {
+  .dashboard-container {
+    margin: 3rem auto;
+  }
+}
+
+
 /* 
 =======
 PROFILE
