--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -2418,8 +2418,8 @@ RIGHT SIDE BAR
     display: grid;
     align-items: start;
     gap: 2rem;
-    /* position: sticky;
-    top: 0; */
+    position: sticky;
+    top: 0;
   }
 
   .right-side-bar-container {
